--- a/Translations/German/text-playerOption-change.xml
+++ b/Translations/German/text-playerOption-change.xml
@@ -115,11 +115,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_FLIP_UNIT_COLORS</zType>
-		<Translation>Flip Unit Colors</Translation>
+		<Translation>Tausche Einheiten Farben</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_FLIP_UNIT_COLORS_DESC</zType>
-		<Translation>Flip unit primary and secondary colors</Translation>
+		<Translation>Tausche primärer und sekundäre Farben von Einheiten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_PLAYEROPTION_SHOW_RIVAL_FAMILY_COLORS</zType>
