--- a/Translations/German/text-relationship-change.xml
+++ b/Translations/German/text-relationship-change.xml
@@ -127,7 +127,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_PLOTTING_AGAINST</zType>
-		<Translation>Verschwörung gege</Translation>
+		<Translation>Verschwörung gegen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_PLOTTING_AGAINST_VERB</zType>
