--- a/Translations/German/text-ui-change.xml
+++ b/Translations/German/text-ui-change.xml
@@ -2657,7 +2657,7 @@ Jeglicher ungespeicherter Forschritt geht verloren.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_MP_SETUP_PICK_NATION_AT_SETTLE</zType>
-		<Translation>PWähle dein Reich wenn du deine erste Stadt gründest.</Translation>
+		<Translation>Wähle dein Reich wenn du deine erste Stadt gründest.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_UI_MP_SETUP_GAME_PICKS_NATION</zType>
