--- a/Translations/German/text-nation-change.xml
+++ b/Translations/German/text-nation-change.xml
@@ -8,30 +8,31 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_ASSYRIA</zType>
-		<Translation>Assyrien~Assyrer~Assyrer</Translation>
+		
+		<Translation>Assyrien~Assyrische~ein Assyrer~Assyrer</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_BABYLONIA</zType>
-		<Translation>Babylonien~Babylonier~Babylonier</Translation>
+		<Translation>Babylonien~Babylonische~ein Babylonier~Babylonier</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_CARTHAGE</zType>
-		<Translation>Karthago~Karthager~Karthager</Translation>
+		<Translation>Karthago~Karthagische~ein Karthager~Karthager</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_EGYPT</zType>
-		<Translation>Ägypten~Ägypter~Ägypter</Translation>
+		<Translation>Ägypten~Ägyptische~ein Ägypter~Ägypter</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_GREECE</zType>
-		<Translation>Griechenland~Grieche~Griechen</Translation>
+		<Translation>Griechenland~Griechische~ein Grieche~Griechen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_PERSIA</zType>
-		<Translation>Persien~Perser~Perser</Translation>
+		<Translation>Persien~Persische~a Perser~Perser</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_NATION_ROME</zType>
-		<Translation>Rom~Römer~Römer</Translation>
+		<Translation>Rom~Römische~ein Römer~Römer</Translation>
 	</Entry>
 </Root>
